tests/error/type_match/typename_array1.bz
function test1(T: [4: typename]);

function test()
{
	test1([3: int32]);
}
